python_ws/log/build_2024-09-23_15-32-53/positio_encoder_decoder_python_package/stderr.log
  File "/home/victory/Robot-Operating-System/test_2_ros2_ws/install/positio_encoder_decoder_python_package/lib/python3.10/site-packages/positio_encoder_decoder_python_package/position_decoder_node.py", line 19
    super()__init__('position_decoder_node')
           ^^^^^^^^
SyntaxError: invalid syntax

